fixed content overlapping content container when content is wider than container
shrunk size of instagram embed

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -65,6 +65,13 @@
     overflow: hidden;
 }
 
+.contentOverflowContainer {
+    height: 100%;
+    width: 100%;
+    
+    overflow: hidden;
+}
+
 .controlsContainer {
     display: flex;
     justify-content: space-around;
