--- a/styles/socials.module.css
+++ b/styles/socials.module.css
@@ -16,6 +16,6 @@
 }
 
 .instagramEmbedContainer {
-    margin-bottom: 80px;
-    
+    margin-bottom: 100px;
+    width: 330px;
 }
